src/test/resources/testData/inspections/linkResolve/wrongCaseForAnchor.adoc
== Hi

link:#<error descr="Anchor doesn't resolve">_Hi</error><caret>[]
